--- a/client/bower.json
+++ b/client/bower.json
@@ -1,15 +1,11 @@
 {
-  "name": "webAnalysis",
+  "name": "web_analysis",
   "version": "0.0.0",
   "dependencies": {
     "angular-resource": "~1.5.3",
     "angular-route": "~1.5.3",
     "bootstrap": "~3.3.5",
     "angular-bootstrap": "~1.3.3",
-    "malarkey": "yuanqing/malarkey#~1.3.1",
-    "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
-    "animate.css": "~3.4.0",
     "angular": "~1.5.3"
   },
   "devDependencies": {
